--- a/metadata.yaml
+++ b/metadata.yaml
@@ -8,6 +8,9 @@ contributor:
     deathdate: 1941
     gutenberg_agent_id: '47001'
     url: http://www.gutenberg.org/2009/agents/47001
+covers:
+- cover_type: archival
+  image_path: 73075-h/images/cover.jpg
 creator:
   author:
     agent_name: Snaith, J. C. (John Collis)
@@ -18,6 +21,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/37216
     wikipedia: https://en.wikipedia.org/wiki/John_Snaith
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73075#Willow-the-king-b-The-story-of-a-cricket-match
 gutenberg_issued: '2024-02-29'
 gutenberg_type: Text
 identifiers:
